--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -77,6 +77,7 @@ prost-types = "0.12.6"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reqwest = { version = "0.11.27", default-features = false }
+rust2go = "0.3.4"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
@@ -106,6 +107,13 @@ vergen = { version = "8.3.1", default-features = false }
 x25519-dalek = "2.0"
 zeroize = "1.6.0"
 nix = "0.29"
+
+talpid-core = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+talpid-platform-metadata = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+talpid-routing = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+talpid-tunnel = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+talpid-wireguard = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
 
 nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "b7baff1" }
 nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "b7baff1" }
