--- a/nym-vpn-core/crates/nym-wg-gateway-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-wg-gateway-client/Cargo.toml
@@ -24,5 +24,5 @@ tracing.workspace = true
 nym-authenticator-client = { path = "../nym-authenticator-client" }
 nym-gateway-directory = { path = "../nym-gateway-directory" }
 
-# Only a very weak dependency and something that we should need (soon)
-talpid-types = { git = "https://github.com/nymtech/nym-vpn-mullvad-libs", rev = "95fb001fb" }
+# Only a very very weak dependency and something that we should not need (soon)
+talpid-types.workspace = true
