--- a/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-cli/Cargo.toml
@@ -19,6 +19,7 @@ ipnetwork.workspace = true
 thiserror.workspace = true
 time.workspace = true
 tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
+tokio-util.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 
