--- a/nym-vpn-x/src-tauri/capabilities/app.json
+++ b/nym-vpn-x/src-tauri/capabilities/app.json
@@ -1,8 +1,9 @@
 {
+  "$schema": "../gen/schemas/desktop-schema.json",
   "identifier": "app",
   "description": "Capability for the main window",
   "local": true,
-  "windows": ["main"],
+  "windows": ["main", "error"],
   "permissions": [
     "core:default",
     "core:window:allow-set-size",
