--- a/nym-vpn-x/src-tauri/capabilities/app.json
+++ b/nym-vpn-x/src-tauri/capabilities/app.json
@@ -1,9 +1,9 @@
 {
   "$schema": "../gen/schemas/desktop-schema.json",
   "identifier": "app",
-  "description": "Capability for the main window",
+  "description": "Capability for the app main window",
   "local": true,
-  "windows": ["main", "error"],
+  "windows": ["main"],
   "permissions": [
     "core:default",
     "core:window:allow-set-size",
