--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -109,24 +109,14 @@ jobs:
           fi
 
       - name: Install Go
+        if: ${{ !contains(matrix.os, 'ubuntu') }}
         uses: actions/setup-go@v5
         with:
           go-version: "stable"
 
-      - name: Override GOROOT and GOTOOLDIR
-        if: contains(matrix.os, 'ubuntu')
-        run: |
-          echo "Setting correct GOROOT and GOTOOLDIR"
-          unset GOROOT
-          unset GOTOOLDIR
-          export GOROOT=$(go env GOROOT)
-          export GOTOOLDIR=$(go env GOTOOLDIR)
-          echo "GOROOT=$GOROOT" >> $GITHUB_ENV
-          echo "GOTOOLDIR=$GOTOOLDIR" >> $GITHUB_ENV
-
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'windows')
+        if: ${{ !contains(matrix.os, 'ubuntu') }}
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
