--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-accompanist = "0.34.0"
+accompanist = "0.36.0"
 agp = "8.6.0"
 coreSplashscreen = "1.0.1"
 detektRulesCompose = "1.4.0"
@@ -10,23 +10,24 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-materialIconsExtended = "1.6.8"
-navigationCompose = "2.7.7"
+materialIconsExtended = "1.7.0"
+navigationCompose = "2.8.0"
 hiltNavigationCompose = "1.2.0"
-lifecycle-compose = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.08.00"
+lifecycle-compose = "2.8.5"
+activityCompose = "1.9.2"
+composeBom = "2024.09.00"
 datastorePreferences = "1.1.1"
+relinker = "1.4.5"
 securityCrypto = "1.1.0-alpha06"
 sentryOpentelemetryCoreVersion = "7.14.0"
 timber = "5.0.1"
 hiltAndroid = "2.52"
-kotlinx-serialization-json = "1.7.1"
+kotlinx-serialization-json = "1.7.2"
 kotlinxCoroutinesCore = "1.8.1"
 uiautomator = "2.3.0"
 window = "1.3.0"
 windowCoreAndroid = "1.3.0"
-desugar = "2.1.0"
+desugar = "2.1.2"
 moshi = "1.15.1"
 moshiKotlin = "1.15.1"
 moshiKotlinCodegen = "1.15.1"
@@ -34,9 +35,9 @@ converterMoshi = "2.11.0"
 zxingAndroidEmbedded = "4.3.0"
 
 gradlePlugins-kotlinxSerialization = "2.0.20"
-gradlePlugins-licensee = "1.7.0"
-gradlePlugins-detekt = "1.23.6"
-gradlePlugins-gross = "0.1.0"
+gradlePlugins-licensee = "1.11.0"
+gradlePlugins-detekt = "1.23.7"
+gradlePlugins-gross = "0.4.2"
 gradlePlugins-sentry = "4.11.0"
 appcompat = "1.7.0"
 material = "1.12.0"
@@ -75,6 +76,7 @@ converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.r
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
+relinker = { module = "com.getkeepsafe.relinker:relinker", version.ref = "relinker" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterMoshi" }
 
 #barcode
