--- a/nym-vpn-android/app/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+	<uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
 	<!--start vpn on boot permission-->
 	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 	<application
@@ -31,9 +32,6 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 				<action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
 			</intent-filter>
-			<meta-data
-				android:name="android.app.shortcuts"
-				android:resource="@xml/shortcuts" />
 		</activity>
 		<activity
 			android:name="com.journeyapps.barcodescanner.CaptureActivity"
