--- a/.github/workflows/build-nym-vpn-x-linux.yml
+++ b/.github/workflows/build-nym-vpn-x-linux.yml
@@ -88,8 +88,8 @@ jobs:
       - name: Build tauri desktop client
         working-directory: nym-vpn-x/src-tauri
         env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
           APP_SENTRY_DSN: ${{ secrets.DESKTOP_JS_SENTRY_DSN }}
           # RUSTFLAGS: "-L ${{ env.WG_GO_LIB_PATH }}"
         run: |
