--- a/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-api-client/Cargo.toml
@@ -13,6 +13,7 @@ base64-url.workspace = true
 bip39 = { workspace = true, features = ["zeroize"] }
 bs58.workspace = true
 chrono.workspace = true
+nym-contracts-common.workspace = true
 nym-crypto = { workspace = true, features = ["asymmetric"] }
 nym-http-api-client.workspace = true
 nym-validator-client.workspace = true
