--- a/.github/workflows/generate-build-info-desktop.yml
+++ b/.github/workflows/generate-build-info-desktop.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Generate build-info
         run: |
           touch build-info.txt
-          echo "Package name:  $(yq -oy '.package.productName' nym-vpn-desktop/src-tauri/tauri.conf.json)" >> build-info.txt
+          echo "App name:  $(yq -oy '.productName' nym-vpn-desktop/src-tauri/tauri.conf.json)" >> build-info.txt
           echo "Version:       $(yq -oy '.package.version' nym-vpn-desktop/src-tauri/Cargo.toml)" >> build-info.txt
           echo "Tauri version: $(yq -oy '.dependencies.tauri.version' nym-vpn-desktop/src-tauri/Cargo.toml)" >> build-info.txt
           echo "Rustc version: ${{ inputs.rust-version}}" >> build-info.txt
