--- a/nym-vpn-x/package.json
+++ b/nym-vpn-x/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nymvpn-x",
   "private": true,
-  "version": "0.1.10",
+  "version": "0.1.11-dev",
   "type": "module",
   "authors": [
     "pierre <dommerc.pierre@gmail.com>",
