--- a/nym-vpn-x/.pkg/aur/PKGBUILD
+++ b/nym-vpn-x/.pkg/aur/PKGBUILD
@@ -12,7 +12,7 @@ pkgdesc='NymVPN next desktop client'
 arch=('x86_64')
 url='https://github.com/nymtech/nym-vpn-client'
 license=('GPL-3.0-only')
-depends=('gcc-libs' 'bash' 'cairo' 'pango' 'gtk3' 'webkit2gtk' 'gdk-pixbuf2' 'glib2' 'openssl' 'libsoup')
+depends=('gcc-libs' 'bash' 'cairo' 'gtk3' 'webkit2gtk-4.1' 'gdk-pixbuf2' 'glib2' 'openssl' 'libsoup3')
 makedepends=('rust' 'cargo' 'protobuf' 'npm')
 optdepends=('nym-vpnd: NymVPN daemon as a systemd service')
 provides=('nymvpn-x')
@@ -37,15 +37,21 @@ prepare() {
 build() {
   pushd "$_srcdir/nym-vpn-x"
 
-  # install UI dependencies
+  # install Js dependencies
   npm i
 
   # build app
   pushd src-tauri
-  # sqlx does not support LTO build flag, which is enabled by default in Arch
+
+  export RUSTUP_TOOLCHAIN=stable
+  # LTO build flag is enabled by default in Arch's makepkg config
+  # but `zstd` fails to build with LTO (dependency of `build-info` crate)
   # set the C flag -ffat-lto-objects to solve the issue
-  # see https://github.com/launchbadge/sqlx/issues/3149
-  CFLAGS+=" -ffat-lto-objects" npm run tauri build -- --bundles none
+  # see https://github.com/mozilla/sccache/issues/862
+  # https://github.com/launchbadge/sqlx/issues/3149
+  export CFLAGS+=' -ffat-lto-objects'
+
+  npm run tauri build -- --no-bundle
 }
 
 package() {
