--- a/nym-vpn-app/.pkg/aur/PKGBUILD
+++ b/nym-vpn-app/.pkg/aur/PKGBUILD
@@ -2,26 +2,26 @@
 # Maintainer: Pierre Dommerc <pierre@nymtech.net>
 # Maintainer: Lawrence Stalder <lawrence.stalder@pm.me>
 
-pkgname=nymvpn-x
+pkgname=nym-vpn-app
 pkgver=0.1.0
 # upstream version
 _pkgver=
 _release_tag=
 pkgrel=1
-pkgdesc='NymVPN next desktop client'
+pkgdesc='NymVPN desktop client'
 arch=('x86_64')
 url='https://github.com/nymtech/nym-vpn-client'
 license=('GPL-3.0-only')
 depends=('gcc-libs' 'bash' 'cairo' 'gtk3' 'webkit2gtk-4.1' 'gdk-pixbuf2' 'glib2' 'openssl' 'libsoup3')
 makedepends=('rust' 'cargo' 'protobuf' 'npm')
 optdepends=('nym-vpnd: NymVPN daemon as a systemd service')
-provides=('nymvpn-x')
-conflicts=('nymvpn-x')
+provides=('nym-vpn-app')
+conflicts=('nym-vpn-app')
 options=(!debug)
 source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/$_release_tag.tar.gz"
-    'nymvpn-x-wrapper.sh'
-    'nymvpn-x.desktop'
-    'nymvpn-x.svg')
+    'nym-vpn-wrapper.sh'
+    'nym-vpn.desktop'
+    'nym-vpn.svg')
 sha256sums=()
 _srcdir="nym-vpn-client-$_release_tag"
 
@@ -35,7 +35,7 @@ prepare() {
 }
 
 build() {
-  pushd "$_srcdir/nym-vpn-x"
+  pushd "$_srcdir/nym-vpn-app"
 
   # install Js dependencies
   npm i
@@ -55,12 +55,12 @@ build() {
 }
 
 package() {
-  pushd "$_srcdir/nym-vpn-x"
-  install -Dm755 "src-tauri/target/release/nymvpn-x" "$pkgdir/usr/bin/nymvpn-x"
+  pushd "$_srcdir/nym-vpn-app"
+  install -Dm755 "src-tauri/target/release/nym-vpn-app" "$pkgdir/usr/bin/nym-vpn-app"
   popd
 
-  install -Dm755 "nymvpn-x-wrapper.sh" "$pkgdir/usr/bin/nymvpn-x-wrapper.sh"
-  install -Dm644 "nymvpn-x.desktop"    "$pkgdir/usr/share/applications/nymvpn-x.desktop"
-  install -Dm644 "nymvpn-x.svg"        "$pkgdir/usr/share/icons/nymvpn-x.svg"
+  install -Dm755 "nym-vpn-wrapper.sh" "$pkgdir/usr/bin/nym-vpn-wrapper.sh"
+  install -Dm644 "nym-vpn.desktop"    "$pkgdir/usr/share/applications/nym-vpn.desktop"
+  install -Dm644 "nym-vpn.svg"        "$pkgdir/usr/share/icons/nym-vpn.svg"
 }
 
