update in wfs artifact names

--- a/.github/workflows/build-nym-vpn-app-linux.yml
+++ b/.github/workflows/build-nym-vpn-app-linux.yml
@@ -104,11 +104,11 @@ jobs:
 
       - name: Move things around to prepare for upload
         env:
-          SRC_APPIMAGE: nym-vpn-app/src-tauri/target/release/bundle/appimage/nym-vpn-app_${{ steps.package-version.outputs.metadata }}_amd64.AppImage
-          DST_APPIMAGE: nym-vpn-app_${{ steps.package-version.outputs.metadata }}.AppImage
-          SRC_DEB: nym-vpn-app/src-tauri/target/release/bundle/deb/nym-vpn-app_${{ steps.package-version.outputs.metadata }}_amd64.deb
+          SRC_APPIMAGE: nym-vpn-app/src-tauri/target/release/bundle/appimage/nym-vpn_${{ steps.package-version.outputs.metadata }}_amd64.AppImage
+          DST_APPIMAGE: nym-vpn_${{ steps.package-version.outputs.metadata }}_x64.AppImage
+          SRC_DEB: nym-vpn-app/src-tauri/target/release/bundle/deb/nym-vpn_${{ steps.package-version.outputs.metadata }}_amd64.deb
           SRC_BIN: nym-vpn-app/src-tauri/target/release/nym-vpn-app
-          DST_BIN: nym-vpn-app_${{ steps.package-version.outputs.metadata }}_linux_x64
+          DST_BIN: nym-vpn_${{ steps.package-version.outputs.metadata }}_linux_x64
         run: |
           mkdir ${{ env.UPLOAD_DIR_LINUX }}
           echo "Copy AppImage"
