Add missing proto dir wf trigger

--- a/.github/workflows/ci-nym-vpn-app-rust.yml
+++ b/.github/workflows/ci-nym-vpn-app-rust.yml
@@ -7,6 +7,7 @@ on:
       - ".github/workflows/ci-nym-vpn-app-rust.yml"
       - "nym-vpn-app/src-tauri/**"
       - "nym-vpn-core/crates/nym-vpn-proto/**"
+      - "proto/**"
 
 env:
   CARGO_TERM_COLOR: always
