Rename nym-vpn-app deb package as part of build (#1168)
* Add missing proto dir wf trigger

* Add script to rename nym-vpn deb package

* Add deb file rename step to build workflow

* Fix path

* Remove old cargo about files

--- a/.github/workflows/build-nym-vpn-app-linux.yml
+++ b/.github/workflows/build-nym-vpn-app-linux.yml
@@ -102,11 +102,17 @@ jobs:
           ls -la target/release/bundle || true
           ls -la target/release/bundle/* || true
 
+      - name: Rename deb file from nym-vpn to nym-vpn-app
+        env:
+          SRC_DEB: nym-vpn-app/src-tauri/target/release/bundle/deb/nym-vpn_${{ steps.package-version.outputs.metadata }}_amd64.deb
+        run: |
+          ./scripts/rename-nym-vpn-app-deb.sh $SRC_DEB
+
       - name: Move things around to prepare for upload
         env:
           SRC_APPIMAGE: nym-vpn-app/src-tauri/target/release/bundle/appimage/nym-vpn_${{ steps.package-version.outputs.metadata }}_amd64.AppImage
           DST_APPIMAGE: nym-vpn_${{ steps.package-version.outputs.metadata }}_x64.AppImage
-          SRC_DEB: nym-vpn-app/src-tauri/target/release/bundle/deb/nym-vpn_${{ steps.package-version.outputs.metadata }}_amd64.deb
+          SRC_DEB: nym-vpn-app_${{ steps.package-version.outputs.metadata }}_amd64.deb
           SRC_BIN: nym-vpn-app/src-tauri/target/release/nym-vpn-app
           DST_BIN: nym-vpn_${{ steps.package-version.outputs.metadata }}_linux_x64
         run: |
