--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,13 +9,19 @@ updates:
   - package-ecosystem: gradle
     directory: /nym-vpn-android
     schedule:
-      interval: daily
+      interval: weekly
     assignees:
       - "zaneschepke"
+    groups:
+      patch-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
   - package-ecosystem: swift
     directory: /nym-vpn-apple
     schedule:
-      interval: daily
+      interval: weekly
     assignees:
       - "rokas-ambrazevicius"
   - package-ecosystem: cargo
@@ -25,9 +31,33 @@ updates:
     assignees:
       - "octol"
       - "neacsu"
+    groups:
+      patch-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
   - package-ecosystem: npm
     directory: /nym-vpn-app
     schedule:
       interval: weekly
     assignees:
       - "doums"
+    groups:
+      patch-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+  - package-ecosystem: cargo
+    directory: /nym-vpn-app/src-tauri
+    schedule:
+      interval: weekly
+    assignees:
+      - "doums"
+    groups:
+      patch-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
