--- a/nym-vpn-app/.pkg/aur/PKGBUILD
+++ b/nym-vpn-app/.pkg/aur/PKGBUILD
@@ -16,7 +16,7 @@ depends=('gcc-libs' 'bash' 'cairo' 'gtk3' 'webkit2gtk-4.1' 'gdk-pixbuf2' 'glib2'
 makedepends=('rust' 'cargo' 'protobuf' 'npm')
 optdepends=('nym-vpnd: NymVPN daemon as a systemd service')
 provides=('nym-vpn-app')
-conflicts=('nym-vpn-app')
+conflicts=('nymvpn-x' 'nym-vpn-app')
 options=(!debug)
 source=("$pkgname-$pkgver.tar.gz::$url/archive/refs/tags/$_release_tag.tar.gz"
     'nym-vpn-wrapper.sh'
