--- a/.github/workflows/build-nym-vpn-core-mac.yml
+++ b/.github/workflows/build-nym-vpn-core-mac.yml
@@ -47,6 +47,10 @@ jobs:
           name: ${{ env.WG_GO_LIB_NAME }}
           path: ${{ env.WG_GO_LIB_PATH }}
 
+      - name: Install cargo-get
+        run: |
+          cargo install --locked cargo-get
+
       - name: Update nym-vpn-apple to use latest core
         run: |
           ./scripts/update-nym-vpn-apple-to-latest-core.sh
