--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -44,6 +44,7 @@ talpid-wireguard.workspace = true
 
 # Nym monorepo
 nym-bandwidth-controller-pre-ecash.workspace = true
+nym-bandwidth-controller.workspace = true
 nym-bin-common.workspace = true
 nym-task.workspace = true
 nym-validator-client.workspace = true
