Upload generated patch file

--- a/.github/workflows/build-nym-vpn-core-mac.yml
+++ b/.github/workflows/build-nym-vpn-core-mac.yml
@@ -55,6 +55,14 @@ jobs:
         run: |
           ./scripts/update-nym-vpn-apple-to-latest-core.sh
           git diff || echo "No changes detected"
+          git diff > mac-plist-changes.patch
+
+      - name: Upload applied changes
+        uses: actions/upload-artifact@v4
+        with:
+          name: mac-plist-changes.patch
+          path: mac-plist-changes.patch
+          retention-days: 3
 
       - name: Build nym-vpn-core (native)
         working-directory: nym-vpn-core
