--- a/nym-vpn-core/crates/nym-vpnc/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnc/Cargo.toml
@@ -16,11 +16,13 @@ clap = { workspace = true, features = ["derive"] }
 parity-tokio-ipc.workspace = true
 prost-types.workspace = true
 prost.workspace = true
+sysinfo.workspace = true
 time = { workspace = true, features = ["formatting"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
 tonic.workspace = true
 tower.workspace = true
 
+nym-bin-common.workspace = true
 nym-gateway-directory = { path = "../nym-gateway-directory" }
 nym-vpn-proto = { path = "../nym-vpn-proto" }
 
