--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -52,6 +52,7 @@ anyhow = "1.0.89"
 async-trait = "0.1.81"
 axum = { version = "0.7.5" }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+backon = "1.2"
 base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
@@ -103,7 +104,6 @@ tower-http = { version = "0.5.2", features = ["cors"] }
 tracing = "0.1"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tryhard = "0.5.1"
 tun2 = { version = "2.0.5", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
