--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -52,6 +52,7 @@ anyhow = "1.0.89"
 async-trait = "0.1.81"
 axum = { version = "0.7.5" }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+backon = "1.2"
 base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
