--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.36.0"
-agp = "8.6.0"
+agp = "8.7.0-rc01"
 coreSplashscreen = "1.0.1"
 detektRulesCompose = "1.4.0"
 jna = "5.15.0"
@@ -10,19 +10,19 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-materialIconsExtended = "1.7.1"
-navigationCompose = "2.8.0"
+materialIconsExtended = "1.7.2"
+navigationCompose = "2.8.1"
 hiltNavigationCompose = "1.2.0"
-lifecycle-compose = "2.8.5"
+lifecycle-compose = "2.8.6"
 activityCompose = "1.9.2"
-composeBom = "2024.09.01"
+composeBom = "2024.09.02"
 datastorePreferences = "1.1.1"
 relinker = "1.4.5"
 securityCrypto = "1.1.0-alpha06"
 sentryOpentelemetryCoreVersion = "7.14.0"
 timber = "5.0.1"
 hiltAndroid = "2.52"
-kotlinx-serialization-json = "1.7.2"
+kotlinx-serialization-json = "1.7.3"
 kotlinxCoroutinesCore = "1.9.0"
 uiautomator = "2.3.0"
 window = "1.3.0"
@@ -43,7 +43,6 @@ appcompat = "1.7.0"
 material = "1.12.0"
 gradlePlugins-ktlint="12.1.1"
 gradlePlugins-grgit="5.2.2"
-lifecycleProcess = "2.8.5"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -107,7 +106,7 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-window-core-android = { group = "androidx.window", name = "window-core-android", version.ref = "windowCoreAndroid" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
+androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycle-compose" }
 
 [plugins]
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
