--- a/nym-vpn-apple/NymMixnetTunnel/Info.plist
+++ b/nym-vpn-apple/NymMixnetTunnel/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleVersion</key>
-	<string>293</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string></string>
 </dict>
