--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -60,6 +60,7 @@ bytes = "1.7"
 chrono = "0.4.38"
 clap = "4.5"
 dirs = "5.0.1"
+ed25519-dalek = { version = "2.1", features = ["digest"] }
 futures = "0.3.30"
 hex = "0.4"
 hickory-resolver = "0.24.1"
