--- a/.github/workflows/create-release-nym-vpn-core.yml
+++ b/.github/workflows/create-release-nym-vpn-core.yml
@@ -109,6 +109,11 @@ jobs:
         with:
           ref: ${{ needs.set_release_version_and_create_branch.outputs.branch_name }}
 
+      - name: Set up Git user
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
       - name: Install cargo-edit, cargo-get
         run: |
           cargo install --locked cargo-edit cargo-get
