--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -65,6 +65,7 @@ nym-bandwidth-controller.workspace = true
 nym-bin-common.workspace = true
 nym-client-core.workspace = true
 nym-config.workspace = true
+nym-credentials-interface.workspace = true
 nym-credential-storage.workspace = true
 nym-credential-storage-pre-ecash.workspace = true
 nym-credentials-pre-ecash.workspace = true
