Use workspace version for remaining crates in core

--- a/nym-vpn-core/crates/nym-ip-packet-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-ip-packet-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-ip-packet-client"
-version = "0.1.0"
+version.workspace = true
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
