--- a/nym-vpn-core/crates/nym-gateway-directory/Cargo.toml
+++ b/nym-vpn-core/crates/nym-gateway-directory/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "nym-gateway-directory"
-version = "0.1.0"
+version.workspace = true
+authors.workspace = true
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 
